# Job-Finder-agent

./: .dockerignore  .env.example  Dockerfile  README.md  api_job_search.py  pyproject.toml  requirements.txt  requirements_vector.txt  resume.json  run_vector_search.py  setup.py
bot/: cli.py  parser.py  utils.py
data/: jobs.json
data/vector_index/: jobs.index  jobs.json
frontend/src/app/: page.tsx
matcher/: matcher.py  schema.py  test_matcher.py
scraper/: __init__.py  company_scraper.py  config.py  linkedin_scraper.py  naukri_scraper.py  utils.py
vector_search/: __init__.py  embedder.py  runner.py  semantic_matcher.py  vector_db.py
