[project]
name = "lld-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "fastapi>=0.115.12",
    "linkedin-jobs-scraper>=5.0.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
    "webdriver-manager>=4.0.2",
]
